istio-yaml/Jaeger-Ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jaeger-web-ui
  namespace: istio-system 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jaeger.xxlaila.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: jaeger-query
          servicePort: 16686
