istio-yaml/grafana-istio-Ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-istio-web-ui
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana-istio.xxlaila.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
