istio-yaml/istio-Ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-web-ui
  namespace: 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: istio.xxlaila.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: productpage
          servicePort: 9080
