istio-yaml/kiali--Ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali-web-ui
  namespace: istio-system 
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: istio-kiali.xxlaila.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: kiali
          servicePort: 20001
