istio-yaml/prometheus-istio-Ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-istio-web-ui
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus-istio.xxlaila.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
